// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.finishBookingAttempted is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start"
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-wrap"
      style={
        Object {
          "height": "185px",
        }
      }
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="contact_header flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-75 layout-row layout-align-start-center"
          >
            <i
              className="fa fa-user flex-none"
              style={
                Object {
                  "background": "-webkit-linear-gradient(left, #333,#fafafa)",
                }
              }
            />
            <p
              className="flex-none"
            >
              Sender
            </p>
          </div>
        </div>
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card with_errors"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-mouse-pointer"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Set
               
              Sender
            </h3>
            <span
              className="error_message"
              style={
                Object {
                  "fontSize": "17px",
                  "left": "15px",
                  "top": "14px",
                }
              }
            >
              * Required
            </span>
          </div>
        </div>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="contact_header flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-75 layout-row layout-align-start-center"
          >
            <i
              className="fa fa-user flex-none"
              style={
                Object {
                  "background": "-webkit-linear-gradient(left, #333,#fafafa)",
                }
              }
            />
            <p
              className="flex-none"
            >
              Receiver
            </p>
          </div>
        </div>
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card with_errors"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-mouse-pointer"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Set
               
              Receiver
            </h3>
            <span
              className="error_message"
              style={
                Object {
                  "fontSize": "17px",
                  "left": "15px",
                  "top": "14px",
                }
              }
            >
              * Required
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <div
          className="contact_header flex-50 layout-row layout-align-start-center"
        >
          <i
            className="fa fa-users flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
          <p
            className="flex-none"
          >
             Notify (Optional) 
          </p>
        </div>
      </div>
      <div
        className="flex-50"
      >
        <div
          className="contact_wrapper"
        >
          <ContactCard
            contactData={
              Object {
                "city": "BAR_CITY",
                "companyName": "BAR_COMPANY",
                "country": "BAR_COUNTRY",
                "email": "bar@yahoo.de",
                "firstName": "BAR_FIRST_NAME",
                "lastName": "BAR_LAST_NAME",
                "number": "13",
                "phone": "0766845382",
                "street": "BAR_STREET",
                "zipCode": "27890",
              }
            }
            contactType="notifyee"
            key="RANDOM_KEY"
            removeFunc={[Function]}
            select={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-50"
      >
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card "
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-plus"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Add
               
              Notifyee
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start"
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-wrap"
      style={
        Object {
          "height": "185px",
        }
      }
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="contact_header flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-75 layout-row layout-align-start-center"
          >
            <i
              className="fa fa-user flex-none"
              style={
                Object {
                  "background": "-webkit-linear-gradient(left, #333,#fafafa)",
                }
              }
            />
            <p
              className="flex-none"
            >
              Sender
            </p>
          </div>
        </div>
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card "
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-mouse-pointer"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Set
               
              Sender
            </h3>
            <span
              className="error_message"
              style={
                Object {
                  "color": "inherit",
                  "fontSize": "17px",
                  "left": "15px",
                  "top": "14px",
                }
              }
            >
              * Required
            </span>
          </div>
        </div>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="contact_header flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-75 layout-row layout-align-start-center"
          >
            <i
              className="fa fa-user flex-none"
              style={
                Object {
                  "background": "-webkit-linear-gradient(left, #333,#fafafa)",
                }
              }
            />
            <p
              className="flex-none"
            >
              Receiver
            </p>
          </div>
        </div>
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card "
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-mouse-pointer"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Set
               
              Receiver
            </h3>
            <span
              className="error_message"
              style={
                Object {
                  "color": "inherit",
                  "fontSize": "17px",
                  "left": "15px",
                  "top": "14px",
                }
              }
            >
              * Required
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <div
          className="contact_header flex-50 layout-row layout-align-start-center"
        >
          <i
            className="fa fa-users flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
          <p
            className="flex-none"
          >
             Notify (Optional) 
          </p>
        </div>
      </div>
      <div
        className="flex-50"
      >
        <div
          className="contact_wrapper"
        >
          <ContactCard
            contactData={
              Object {
                "city": "BAR_CITY",
                "companyName": "BAR_COMPANY",
                "country": "BAR_COUNTRY",
                "email": "bar@yahoo.de",
                "firstName": "BAR_FIRST_NAME",
                "lastName": "BAR_LAST_NAME",
                "number": "13",
                "phone": "0766845382",
                "street": "BAR_STREET",
                "zipCode": "27890",
              }
            }
            contactType="notifyee"
            key="RANDOM_KEY"
            removeFunc={[Function]}
            select={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-50"
      >
        <div
          className="contact_wrapper"
        >
          <div
            className="layout-column flex-align-center-center placeholder_card "
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-center-center"
            >
              <i
                className="fa fa-plus"
                style={
                  Object {
                    "fontSize": "30px",
                  }
                }
              />
            </div>
            <h3>
              Add
               
              Notifyee
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
